# pybind11_tutorial

./: .gitignore  README.md
advanced/: CMakeLists.txt  person.cpp  person.h  pybind_wrapper.cpp  script.py
simple/: CMakeLists.txt  pybind_wrapper.cpp  script.py
stl/: CMakeLists.txt  pybind_wrapper.cpp  script.py
